# image_dataspliter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  generated_annotation.json  pyproject.toml  split_experiment_Method.docx  splitdata_frameworkdocx.docx
docs/: Makefile  conf.py  example.ipynb  make.bat
src/image_dataspliter/: __init__.py  clust.py  feat.py  generate_coco_ann.py  image_dataspliter.py
tests/: example_split_data.py  export_data.py  test_image_dataspliter.py
